--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -277,6 +277,25 @@ a:active, a:focus {
   text-align: center;
 }
 
+.head-background {
+  // background-size: cover; /* 覆盖整个容器，不改变宽高比 */
+  background-position: top center; /* 居中显示 */
+  background-size: 300px;
+  // min-height: 200px; /* 根据需要调整 */
+  // color: white; /* 假设需要的文字颜色 */
+  background-repeat: no-repeat;
+
+}
+
+.float-img {
+  float: right; /* 图片向左浮动 */
+  width: 200px;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px; /* 在图片右侧添加一些间隙 */
+  margin-bottom: 10px; /* 在图片下方添加一些间隙 */
+}
+
 // #wrapper {
 //   min-height: calc(100vh - 100px);
 // }
